# smalltabnets

./: README.md  benchmark.py  pyproject.toml  requirements.txt
config/: limesoda_amformer.yaml  limesoda_autoint.yaml  limesoda_excelformer.yaml  limesoda_ft_transformer.yaml  limesoda_mlp.yaml  limesoda_modernnca.yaml  limesoda_modernnca_ple.yaml  limesoda_ple_modernnca.yaml  limesoda_ple_realmlp.yaml  limesoda_ple_tabm.yaml  limesoda_ple_tabr.yaml  limesoda_realmlp.yaml  limesoda_rf.yaml  limesoda_t2g_former.yaml  limesoda_tabm.yaml  limesoda_tabm_ple.yaml  limesoda_tabpfn.yaml  limesoda_tabr.yaml  limesoda_tabr_ple.yaml  limesoda_xgboost.yaml
config/pss/: limesoda_amformer.yaml  limesoda_autoint.yaml  limesoda_excelformer.yaml  limesoda_ft_transformer.yaml  limesoda_lasso.yaml  limesoda_lr.yaml  limesoda_mlp.yaml  limesoda_ple_modernnca.yaml  limesoda_ple_realmlp.yaml  limesoda_ple_tabm.yaml  limesoda_ple_tabr.yaml  limesoda_rf.yaml  limesoda_ridge.yaml  limesoda_t2g_former.yaml  limesoda_tabpfn.yaml  limesoda_xgboost.yaml
config/spectroscopic/: limesoda_ss_amformer.yaml  limesoda_ss_autoint.yaml  limesoda_ss_excelformer.yaml  limesoda_ss_ft_transformer.yaml  limesoda_ss_mlp.yaml  limesoda_ss_modernnca.yaml  limesoda_ss_pca_amformer.yaml  limesoda_ss_pca_autoint.yaml  limesoda_ss_pca_excelformer.yaml  limesoda_ss_pca_ft_transformer.yaml  limesoda_ss_pca_lasso.yaml  limesoda_ss_pca_lr.yaml  limesoda_ss_pca_mlp.yaml  limesoda_ss_pca_ple_modernnca.yaml  limesoda_ss_pca_ple_realmlp.yaml  limesoda_ss_pca_ple_tabm.yaml  limesoda_ss_pca_ple_tabr.yaml  limesoda_ss_plsr.yaml  (+17 more)
(+46 files in other folders)
